2.5 - Fixed small margin for room component on mobile

--- a/src/app/components/room/room.component.scss
+++ b/src/app/components/room/room.component.scss
@@ -45,3 +45,9 @@ app-room {
 		margin-right: 0;
 	}
 }
+
+@media screen and (max-width: 767px) {
+	.room-container {
+		margin-top: 15px;
+	}
+}
